deploy: 3a49f0eb8e41964766591fb5b8f12b540d9d346a

--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Web version of the DND Character sheet">
+    <meta name="theme-color" content="#1c1618" />
 
     <title>DCS</title>
 
