--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Web version of the DND Character sheet">
+    <meta name="theme-color" content="#1c1618" />
 
     <title>DCS</title>
 
