deploy: ad54cd8632d71fa575a08ce87b6c8f84902dbb58

--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='athletics_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -2006,7 +2006,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='acrobatics_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -2186,7 +2186,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='sleight_of_hand_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -2366,7 +2366,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='stealth_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -2982,7 +2982,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='arcana_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -3162,7 +3162,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='history_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -3342,7 +3342,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='investigation_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -3522,7 +3522,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='nature_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -3702,7 +3702,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='religion_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -4102,7 +4102,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='animal_handling_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -4282,7 +4282,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='insight_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -4462,7 +4462,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='medicine_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -4642,7 +4642,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='perception_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -4822,7 +4822,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='survival_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -5222,7 +5222,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='deception_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -5402,7 +5402,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='intimidation_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -5582,7 +5582,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='performance_proficiency'
   class="flex items-center justify-center "
 >
   <button
@@ -5762,7 +5762,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["none","proficient","master"]'
-  data-multi-toggle-id-value='_proficiency'
+  data-multi-toggle-id-value='persuasion_proficiency'
   class="flex items-center justify-center "
 >
   <button
