--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8">
-    <meta name="description" content="Web version of the DND Character sheet">
+    <meta name="description" content="Web version of the DND Character sheet" />
     <meta name="theme-color" content="#d6d6db" />
+    <meta name="google-site-verification" content="McJjWm7evyK-hS4xNNjdg9-kEi242xIwm31BNFS6fuc" />
 
     <title>DCS</title>
 
