--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       text-center text-gray-900 border-2 rounded-lg border-gray-400
     dark:text-slate-200 dark:border-gray-500 hover:border-gray-800 dark:hover:border-gray-200
     dark:active:border-gray-200 active:border-gray-800 active:scale-90 duration-100
-      flex flex-col p-1
+      flex flex-col p-1 min-w-24 min-h-9
       
     "
     for="character_import"
@@ -974,7 +974,7 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   data-multi-toggle-hidden-class="hidden"
   data-multi-toggle-states-value='["unchecked","checked"]'
   data-multi-toggle-id-value='deletion_confirmation'
-  class="flex items-center justify-center "
+  class="flex items-center justify-center min-w-24"
 >
   <button
     data-action="click->multi-toggle#toggle"
@@ -8081,11 +8081,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 1
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -8434,11 +8434,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 2
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -8711,11 +8711,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 3
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -8993,11 +8993,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 4
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -9270,11 +9270,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 5
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -9547,11 +9547,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 6
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -9753,11 +9753,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 7
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -9954,11 +9954,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 8
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -10079,11 +10079,11 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
   
 
   <div class="flex flex-col gap-1 col-span-3 sm:col-span-2 xl:col-span-1">
-    <h3 class="font-semibold">
+    <h2 class="font-semibold">
       <span
           data-i18n-target="translation" data-t="spellcasting.spell_slots.level"
       ></span> 9
-    </h3>
+    </h2>
     <div class="flex flex-col gap-1">
       <div class="pt-1 w-5/12">
   <div class="relative z-0">
@@ -10681,9 +10681,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -11177,9 +11177,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -11673,9 +11673,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -12169,9 +12169,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -12665,9 +12665,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -13161,9 +13161,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -13657,9 +13657,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -14153,9 +14153,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -14649,9 +14649,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -15145,9 +15145,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -15641,9 +15641,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -16137,9 +16137,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -16633,9 +16633,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -17129,9 +17129,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -17625,9 +17625,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -18121,9 +18121,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -18617,9 +18617,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -19113,9 +19113,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -19609,9 +19609,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -20105,9 +20105,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -20601,9 +20601,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -21097,9 +21097,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -21593,9 +21593,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -22089,9 +22089,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -22585,9 +22585,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -23081,9 +23081,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -23577,9 +23577,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -24073,9 +24073,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -24569,9 +24569,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
@@ -25065,9 +25065,9 @@ c20 4 40 5 44 3 5 -3 7 -2 6 3 -1 4 10 21 25 37 33 35 35 71 6 87 -17 9 -20 8
       flex gap-2 justify-center items-center
     "
   >
-    <h3>
+    <span>
       <span data-i18n-target="translation" data-t="spellcasting.spells.items.components.title"></span>:
-    </h3>
+    </span>
 
     <div
   data-controller="multi-toggle"
